--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1254,7 +1254,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
   title={Contr{\^o}le de la propagation et du rayonnement {\'e}lectromagn{\'e}tiques par les m{\'e}tamat{\'e}riaux},
   author={Cro{\"e}nne, Charles},
   year={2009},
-  school={Universit{\'e} des Sciences et Technologie de Lille-Lille I}
+  school={Universit{\'e} des Sciences et Technologie de Lille, Lille I}
 }
 
 /*}}}*/
@@ -1788,8 +1788,8 @@ lts.fzu.cz/pdf/d-js.pdf
 }
 @misc{dominec2015_triostepper,
 	author = {Dominec, Filip},
-	title = {TrioStepper, controller for three stepper motors, \textit{https://github.com/FilipDominec/triostepper}, last visited {M}ay 2014},
-	howpublished ={Online},
+	title = {TrioStepper, controller for three stepper motors, last visited {M}ay 2014},
+	howpublished ={\texttt{https://github.com/FilipDominec/triostepper}, Online},
 }
 @misc{dominec2014_imagej,
 	author = {Dominec, Filip},
@@ -1850,28 +1850,33 @@ lts.fzu.cz/pdf/d-js.pdf
 }
 /*}}}*/
 % -- Filter diagonalisation (todo) --/*{{{*/
-@article{mandelshtam1997harmonic,
-  title={Harmonic inversion of time signals and its applications},
-  author={Mandelshtam, Vladimir A and Taylor, Howard S},
-  journal={The Journal of chemical physics},
-  volume={107},
-  number={17},
-  pages={6756--6769},
-  year={1997},
-  publisher={AIP Publishing}
-}
-
-
-% Chen 2000 FDMmaster
+%@article{mandelshtam1997harmonic,
+  %title={Harmonic inversion of time signals and its applications},
+  %author={Mandelshtam, Vladimir A and Taylor, Howard S},
+  %journal={The Journal of chemical physics},
+  %volume={107},
+  %number={17},
+  %pages={6756--6769},
+  %year={1997},
+  %publisher={AIP Publishing}
+%}
 @thesis{chen2001filter,
   title={Filter diagonalization method as a high resolution spectral estimator},
   author={Chen, Jianhan},
-  year={2000}
+  year={2000},
   school={University of California, Irvine}
+}
+A Comparative Study of the Filter Diagonalization Method and Decimated Signal Diagonalization Method for One-Dimensional NMR Data Processing
+@article{chao2002comparative,
+  title={A comparative study of the filter diagonalization method and decimated signal diagonalization method for one-dimensional NMR data processing},
+  author={Cao, K},
+  journal={UCI Undergraduate Res. J},
+  volume={5},
+  pages={1--8},
+  year={2002}
 }
 
 
-% Chen 2000 FDM PhDThesisProposal
 % KathleenFDM
 % Mandelshtam 2000 FDM
 /*}}}*/
@@ -1900,7 +1905,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{dresselhaus1966optical,
   title={Optical properties of solids},
   author={Dresselhaus, MS},
-  journal={Proc. of Int. School of Phys.“Enrico Fermi},
+  journal={Proc. of Int. School of Phys. Enrico Fermi},
   pages={243},
   year={1966}
 }
@@ -2308,6 +2313,7 @@ lts.fzu.cz/pdf/d-js.pdf
   year={2013}
 }
 
+
 % == History ==
 % -- 
 @article{bragg1913reflection,
@@ -2390,6 +2396,14 @@ lts.fzu.cz/pdf/d-js.pdf
   url = {https://www.cv.nrao.edu/~demerson/bose/bose.html},
   urldate = {2015-07-30}
 }
+@book{sihvola2002electromagnetic,
+  title={Electromagnetic emergence in metamaterials},
+  author={Sihvola, Ari},
+  year={2002},
+  publisher={Springer}
+}
+
+
 
 % -- Artif diels -- /*{{{*/
 @article{kock1948metallic,
