--- a/result.tex
+++ b/result.tex
@@ -345,7 +345,7 @@ We performed series of experiments to measure the effective permeability  $\mu_{
 % todo refer to the loss scan here
 
 \begin{displayquote}
-\textit{antiresonance "may not" come from periodicity, as it is also observed in random structures}  (Ref. \cite{wallen2010})
+\textit{The periodicity cannot, however, be the only explanation since qualitatively similar antiresonances have been reported using the measured data for a disordered high permittivity composite} (Ref. \cite{wallen2010})
 \end{displayquote}
 Anti-resonant curve  of resonant inclusions : ""; %% 
 % -- but this argument assumes that aperiodicity  will always prohibit antiresonance; in fact it may just broaden it in spectra
